# zkvm-benchmarks

./: Makefile  README.md
sp1/src/: main.rs
zkwasm/: .gitignore  Cargo.toml  Makefile
zkwasm/fibonacci-guest/: Cargo.toml  Makefile
zkwasm/fibonacci-guest/src/: lib.rs
zkwasm/sha2-guest/: Cargo.toml  Makefile
zkwasm/sha2-guest/src/: template
zkwasm/simulator-jsnode/: package.json  wasi_exec_node.js
zkwasm/src/: main.rs
