[package]
name = "sha2-guest"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "guest"
path = "src/lib.rs"

[features]
default = []

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zkwasm-rust-sdk = { git = "https://github.com/DelphinusLab/zkWasm-rust.git" }
wasm-bindgen = "0.2.83"
sha2 = { version = "0.10.8", default-features = false }